# pydantic-sqlalchemy-filterset

./: .copier-answers.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  main.yml
docs/: index.md
pydantic_sqlalchemy_filterset/: core.py  filters.py  strategies.py  types.py
tests/: conftest.py  test_filters.py
